infra/k8s/blsr-backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blsr-backend-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: api.bitcoinsolar.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: blsr-backend-svc
                port:
                  number: 80
